--- a/about.html
+++ b/about.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
-    <link rel="stylesheet" href="css/style1.css">
+    <link rel="stylesheet" href="css/styleAU.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -14,7 +15,7 @@
     <script type="text/javascript"></script>
 </head>
 <body>
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: black;" scrolling-navbar>
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark d-flex justify-content-center row " style="position: absolute;">
 
     <div class="container">
 
@@ -71,32 +72,78 @@
 
     </div>
   </nav>    
+  
+  <div class="imagecontainer" style="position: relative;">
+    <img src="img/Main.jpg" class= "bgimage" alt="image train">
+  </div>
 
-  <div class="mt-5 pt-5 pb-5 footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-5 col-xs-12 about-company">
-          <h2>Heading</h2>
-          <p class="pr-5 text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac ante mollis quam tristique convallis </p>
-          <p><a href="#"><i class="fa fa-facebook-square mr-1"></i></a><a href="#"><i class="fa fa-linkedin-square"></i></a></p>
-        </div>
-
-        <div class="col-lg-4 col-xs-12 location">
-          <h4 class="mt-lg-0 mt-sm-4">Location</h4>
-          <p>23, Zone1 MP Nagar, Bhopal, MP, and New Delhi India Stapleford, U.K.</p>
-          <p class="mb-0"><i class="fa fa-phone mr-3"></i>+91-8770485122</p>
-          <p><i class="fa fa-envelope-o mr-3"></i>contactus@sigtech-solutions.com</p>
-          <p><i class="fa fa-envelope-o mr-3"></i>hr@sigtech-solutions.com</p>
-        </div>
-      </div>
-      <div class="row mt-5">
-        <div class="col copyright">
-          <p class=""><small class="text-white-50">© 2019. All Rights Reserved.</small></p>
-        </div>
-      </div>
+  <div class="main">
+    <div   class="content" style="padding-top: 5rem ; ">
+      <H1  style="font-size: 65px;"><ul> About Us </ul> </H1>
     </div>
+    <!-- INTRO -->
+    <div class="innercontent ">
+      <p style="color: white; " >
+        Welcome to Sigtech Solutions, specialists in the delivery of railway signalling Designs and training programmes
+        to join the Rail Signalling Industry. Sigtech Solutions has been set up by industry people with an excellent
+        reputation in the Signal Engineering discipline both in the India and internationally. Our fields of expertise
+        include Technical Training and Development, Competence Assurance and Technical Consultancy.
+      </p>
+    </div>
+    <!-- OUR MISSION -->
+    <div class="content">
+      <h1  style="font-size: 65px;">Our Mission</h1>
+
+    </div>
+    <div style="text-align: left;" class="innercontent">
+      <p  style="color:white;">To be the best choice for advanced signalling design and training
+        This will be achieved by:- <br>
+        <i class="fas fa-star"></i> Offering excellent value for money <br>
+        <i class="fas fa-star"></i> Encouraging, training merit students via stipend based apprentice scheme <br>
+        <i class="fas fa-star"></i> Aligning training to meet each customers requirements <br>
+        <i class="fas fa-star"></i> Ensuring that each individual trainees needs are met <br>
+        <i class="fas fa-star"></i> Only employing fully qualified and competent trainers <br>
+        <i class="fas fa-star"></i> Guiding trainees to secure a job in the industry</p>
+
     </div>
 
+  
+    <div class="content"  >
+      <h1  style="font-size: 65px;">Our Courses</h1>
+    </div>  
+    <div style="text-align: left;" class="innercontent"  >
+      <p style="color: white;">
+        1. Basic Railway Signalling course for graduates – Paid course <br>
+        2. Advanced railway signalling course for experienced people -Paid course
+        <br>
+        3. Graduate Apprentice scheme – Stipend based course <br>
+        Why Choose Us <br>
+        <i class="fas fa-star"></i> Good Skills <br>
+        <i class="fas fa-star"></i> Experts Help <br>
+        <i class="fas fa-star"></i>  Innovation <br>  
+        <i class="fas fa-star"></i>     Creative    
+      </p>
+
+    </div>
+    <section>
+      <footer class="footer-distributed">
+        <div class="Footer">
+          <div class="footer-left">
+            <h3>Sigtech-Solutions</h3>
+            <p class="footer-company-name">©2021 Sig-Tech. All Rights Reserved |</p>
+            <div class="footer-icons">
+  
+              <a href="#"><i class="fab fa-facebook"></i></a>
+              <a href="#"><i class="fab fa-twitter-square"></i></a>
+              <a href="#"><i class="fab fa-linkedin"></i></a>
+  
+            </div>
+          </div>
+        </div>
+      </footer>
+    </section>
+  
+  </div>
 
 
     
