--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <!-- Left -->
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="Home">Home
-                </a>
+                <a class="nav-link" href="index.html">Home  </a>
+               
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="about.html" >About Us</a>
@@ -53,8 +53,8 @@
                     <a class="dropdown-item" href="#">Projects</a>
                     <a class="dropdown-item" href="#">Research And Development</a>
                     <a class="dropdown-item" href="#">Courses</a>
-                    <a class="dropdown-item" href="#">Training Certification</a>
-                    <a class="dropdown-item" href="#">Our Potential Employers</a>
+                    <a class="dropdown-item" href="Trainingcertificate.html">Training Certification</a>
+                    <a class="dropdown-item" href="ourpotentiaemployers.html">Our Potential Employers</a>
                     <a class="dropdown-item" href="#">Why To Enroll</a>
                     <a class="dropdown-item" href="#">FAQ</a>
                     <a class="dropdown-item" href="#">Payment</a>
