--- a/ourpotentiaemployers.html
+++ b/ourpotentiaemployers.html
@@ -47,11 +47,11 @@
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="#">Projects</a>
                 <a class="dropdown-item" href="#">Research And Development</a>
-                <a class="dropdown-item" href="#">Courses</a>
-                <a class="dropdown-item" href="#">Training Certification</a>
-                <a class="dropdown-item" href="#">Our Potential Employers</a>
-                <a class="dropdown-item" href="#">Why To Enroll</a>
-                <a class="dropdown-item" href="#">FAQ</a>
+                <a class="dropdown-item" href="Tcourse.html">Courses</a>
+                <a class="dropdown-item" href="Trainingcertificate.html">Training Certification</a>
+                <a class="dropdown-item" href="ourpotentiaemployers.html">Our Potential Employers</a>
+                <a class="dropdown-item" href="WTE.html">Why To Enroll</a>
+                <a class="dropdown-item" href="faq.html">FAQ</a>
                 <a class="dropdown-item" href="#">Payment</a>
               </div>
             </li>
@@ -61,9 +61,9 @@
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Apprenticeship </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                <a class="dropdown-item" href="#">Apperentice Courses</a>
-                <a class="dropdown-item" href="#">Stipened During Apprenticeship</a>
-                <a class="dropdown-item" href="#">Interview Opportunities</a>
+                <a class="dropdown-item" href="Acourses.html">Apperentice Courses</a>
+                <a class="dropdown-item" href="stipenduringtraining.html">Stipened During Apprenticeship</a>
+                <a class="dropdown-item" href="interviewopportunities.html">Interview Opportunities</a>
               </div>
             </li>
           </li>
@@ -79,37 +79,37 @@
 
   <div class="main">
     <div   class="content" style="padding-top: 5rem ; ">
-      <H1  style="font-size: 65px;"><ul> Our Potential Employers </ul> </H1>
+      <H1  style="font-size: 55px;"><ul> Our Potential Employers </ul> </H1>
     </div>
     <!-- INTRO -->
     <div class="innercontent " style="text-align: left;">
       <p style="color: white; "  >
         Once completing the training, you will have best chances to be recruited by below companies. <br>
-        <i class="fas fa-star"></i>Atkins <br>
-        <i class="fas fa-star"></i>Alstom <br>
-        <i class="fas fa-star"></i>Siemens <br>
-        <i class="fas fa-star"></i>Thales <br>
-        <i class="fas fa-star"></i>Aecom <br>
-        <i class="fas fa-star"></i>JMDR  <br>
-        <i class="fas fa-star"></i>Wabtec <br>
-        <i class="fas fa-star"></i>WSP <br>
-        <i class="fas fa-star"></i>Arcadis <br>
-        <i class="fas fa-star"></i>Jacobs  <br>
-        <i class="fas fa-star"></i>Hitachi  <br>
-        <i class="fas fa-star"></i>Bombardier transportation <br>
-        <i class="fas fa-star"></i>Indian rail ways based companies <br>
-        <i class="fas fa-star"></i>Public rail sector companies in UK, Australia & Europe
+        <i class="fas fa-star"></i>   Atkins <br> 
+        <i class="fas fa-star"></i >  Alstom <br>
+        <i class="fas fa-star"></i>   Siemens <br>
+        <i class="fas fa-star"></i>   Thales <br>
+        <i class="fas fa-star"></i>   Aecom <br>
+        <i class="fas fa-star"></i>   JMDR  <br>
+        <i class="fas fa-star"></i>   Wabtec <br>
+        <i class="fas fa-star"></i>   WSP <br>
+        <i class="fas fa-star"></i>   Arcadis <br>
+        <i class="fas fa-star"></i>   Jacobs  <br>
+        <i class="fas fa-star"></i>   Hitachi  <br>
+        <i class="fas fa-star"></i>   Bombardier transportation <br>
+        <i class="fas fa-star"></i>   Indian rail ways based companies <br>
+        <i class="fas fa-star"></i>   Public rail sector companies in UK, Australia & Europe
 
       </p>
     </div>
     <!-- OUR MISSION -->
     <div class="content">
-      <h1  style="font-size: 65px;">Intensive training</h1>
+      <h1  style="font-size: 55px;">Intensive training</h1>
 
     </div>
     <div style="text-align: left;" class="innercontent">
       <p  style="color:white;">
-        Our intensive training covers enough information of about two years’ worth of training provided by the above mentioned companies. We also provide practical work experience. With relevant training background and work experience, you will be recruited by one of the major companies in the infrastructure sector.
+        Our intensive training covers enough information of about two years’ worth of training provided by the mentioned companies. We also provide practical work experience. With relevant training background and work experience, you will be recruited by one of the major companies in the infrastructure sector.
       </p>
 
     </div>
