--- a/Acourses.html
+++ b/Acourses.html
@@ -47,11 +47,11 @@
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="#">Projects</a>
                 <a class="dropdown-item" href="#">Research And Development</a>
-                <a class="dropdown-item" href="#">Courses</a>
-                <a class="dropdown-item" href="#">Training Certification</a>
-                <a class="dropdown-item" href="#">Our Potential Employers</a>
-                <a class="dropdown-item" href="#">Why To Enroll</a>
-                <a class="dropdown-item" href="#">FAQ</a>
+                <a class="dropdown-item" href="Tcourse.html">Courses</a>
+                <a class="dropdown-item" href="Trainingcertificate.html">Training Certification</a>
+                <a class="dropdown-item" href="ourpotentiaemployers.html">Our Potential Employers</a>
+                <a class="dropdown-item" href="WTE.html">Why To Enroll</a>
+                <a class="dropdown-item" href="faq.html">FAQ</a>
                 <a class="dropdown-item" href="#">Payment</a>
               </div>
             </li>
@@ -61,9 +61,9 @@
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Apprenticeship </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                <a class="dropdown-item" href="#">Apperentice Courses</a>
-                <a class="dropdown-item" href="#">Stipened During Apprenticeship</a>
-                <a class="dropdown-item" href="#">Interview Opportunities</a>
+                <a class="dropdown-item" href="Acourses.html">Apperentice Courses</a>
+                <a class="dropdown-item" href="stipenduringtraining.html">Stipened During Apprenticeship</a>
+                <a class="dropdown-item" href="interviewopportunities.html">Interview Opportunities</a>
               </div>
             </li>
           </li>
@@ -78,7 +78,7 @@
     <div class="main">
         <div class="table" style="color: white;" >
         <table style="background-color:transparent;color: white; " border="1" cellspacing="0" cellpeding="0" class="table table-striped table-bordered dataTable no-footer" role="grid"><thead class="thead-dark">
-            <tr role="row"><td  class="font-size:51px ; color: white;" scope="col" rowspan="1" colspan="1">
+            <tr role="row"><td  class="font-size:45px ; color: white;" scope="col" rowspan="1" colspan="1">
               <div style="color: white;" > <span>Code</span></div></td><td  class="font-size:51px" scope="col" rowspan="1" colspan="1">
               <div > <span>Title</span></div></td><td  class="font-size:51px" scope="col" rowspan="1" colspan="1">
               <div > <span>Description</span></div></td><td  class="font-size:51px" scope="col" rowspan="1" colspan="1">
@@ -87,7 +87,7 @@
               <div> <span>Action</span></div></td></tr>
             <tr role="row"><td width="78" scope="col" rowspan="1" colspan="1">  AC201 (Merit based course)</td><td  width="245" scope="col" rowspan="1" colspan="1">  Signalling Training for Graduates - Apprentice scheme with a stipend (8000 per month)</td><td  width="245" scope="col" rowspan="1" colspan="1">  Advanced signalling training (Module 1 to Module 6), license guidance and job guidance. Duration - 12 months</td><td  width="360" scope="col" rowspan="1" colspan="1">  Engineering courses in Electronics/Electrical/Mechanical. </td><td width="79" scope="col" rowspan="1" colspan="1">  Free</td><td width="89" scope="col" rowspan="1" colspan="1"> 
                   Contact Us</a> </td></tr>
-                  <tr role="row"><td  width: 78px;" width="78" scope="col" class="sorting_asc" tabindex="0" aria-controls="jobsTbl" rowspan="1" colspan="1" aria-label="  AC202 (Paid course): activate to sort column descending" aria-sort="ascending"> \ AC202 (Paid course)</td><td width: 244px;" width="245" scope="col" class="sorting" tabindex="0" aria-controls="jobsTbl" rowspan="1" colspan="1" aria-label="  Signalling Training for Graduates - Apprentice scheme with a stipend (8000 per month): activate to sort column ascending">  Signalling Training for Graduates - Apprentice scheme with a stipend (8000 per month)</td><td  width: 245px;" width="245" scope="col" class="sorting" tabindex="0" aria-controls="jobsTbl" rowspan="1" colspan="1" aria-label="  Advanced signalling training (Module 1 to Module 6), license guidance and job guidance.Duration - 12 months: activate to sort column ascending">  Advanced signalling training (Module 1 to Module 6), license guidance and job guidance.Duration - 12 months</td><td  width: 360px;" width="360" scope="col" class="sorting" tabindex="0" aria-controls="jobsTbl" rowspan="1" colspan="1" aria-label="  Engineering courses in Electronics/Electrical/Mechanical : activate to sort column ascending">  Engineering courses in Electronics/Electrical/Mechanical</td><td  width: 79px;" width="79" scope="col" class="sorting" tabindex="0" aria-controls="jobsTbl" rowspan="1" colspan="1" aria-label="  INR100,000: activate to sort column ascending">  INR100,000</td><td  width: 89px;" width="89" scope="col" class="sorting" tabindex="0" aria-controls="jobsTbl" rowspan="1" colspan="1" aria-label=" 
+                  <tr role="row"><td  width: 70px;" width="70" scope="col" class="sorting_asc" tabindex="0" aria-controls="jobsTbl" rowspan="1" colspan="1" aria-label="  AC202 (Paid course): activate to sort column descending" aria-sort="ascending"> \ AC202 (Paid course)</td><td width: 244px;" width="245" scope="col" class="sorting" tabindex="0" aria-controls="jobsTbl" rowspan="1" colspan="1" aria-label="  Signalling Training for Graduates - Apprentice scheme with a stipend (8000 per month): activate to sort column ascending">  Signalling Training for Graduates - Apprentice scheme with a stipend (8000 per month)</td><td  width: 245px;" width="245" scope="col" class="sorting" tabindex="0" aria-controls="jobsTbl" rowspan="1" colspan="1" aria-label="  Advanced signalling training (Module 1 to Module 6), license guidance and job guidance.Duration - 12 months: activate to sort column ascending">  Advanced signalling training (Module 1 to Module 6), license guidance and job guidance.Duration - 12 months</td><td  width: 360px;" width="360" scope="col" class="sorting" tabindex="0" aria-controls="jobsTbl" rowspan="1" colspan="1" aria-label="  Engineering courses in Electronics/Electrical/Mechanical : activate to sort column ascending">  Engineering courses in Electronics/Electrical/Mechanical</td><td  width: 79px;" width="79" scope="col" class="sorting" tabindex="0" aria-controls="jobsTbl" rowspan="1" colspan="1" aria-label="  INR100,000: activate to sort column ascending">  INR100,000</td><td  width: 89px;" width="89" scope="col" class="sorting" tabindex="0" aria-controls="jobsTbl" rowspan="1" colspan="1" aria-label=" 
                   Contact Us : activate to sort column ascending">  
                   Contact Us</a> </td></tr>
             
