--- a/Trainingcertificate.html
+++ b/Trainingcertificate.html
@@ -47,11 +47,11 @@
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="#">Projects</a>
                 <a class="dropdown-item" href="#">Research And Development</a>
-                <a class="dropdown-item" href="#">Courses</a>
-                <a class="dropdown-item" href="#">Training Certification</a>
-                <a class="dropdown-item" href="#">Our Potential Employers</a>
-                <a class="dropdown-item" href="#">Why To Enroll</a>
-                <a class="dropdown-item" href="#">FAQ</a>
+                <a class="dropdown-item" href="Tcourse.html">Courses</a>
+                <a class="dropdown-item" href="Trainingcertificate.html">Training Certification</a>
+                <a class="dropdown-item" href="ourpotentiaemployers.html">Our Potential Employers</a>
+                <a class="dropdown-item" href="WTE.html">Why To Enroll</a>
+                <a class="dropdown-item" href="faq.html">FAQ</a>
                 <a class="dropdown-item" href="#">Payment</a>
               </div>
             </li>
@@ -61,9 +61,9 @@
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Apprenticeship </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                <a class="dropdown-item" href="#">Apperentice Courses</a>
-                <a class="dropdown-item" href="#">Stipened During Apprenticeship</a>
-                <a class="dropdown-item" href="#">Interview Opportunities</a>
+                <a class="dropdown-item" href="Acourses.html">Apperentice Courses</a>
+                <a class="dropdown-item" href="stipenduringtraining.html">Stipened During Apprenticeship</a>
+                <a class="dropdown-item" href="interviewopportunities.html">Interview Opportunities</a>
               </div>
             </li>
           </li>
@@ -80,13 +80,13 @@
 
   <div class="main">
     <div   class="content" style="padding-top: 5rem ; ">
-      <H1  style="font-size: 65px;"><ul> Training Certification </ul> </H1>
+      <h2  style="font-size: 60px;"><ul> Training Certification </ul> </H2>
     </div>
     <!-- INTRO -->
     <div class="innercontent " style="text-align: left;">
       <p style="color: white; "  >
         <strong>Assessment and Certification</strong>
-         <br> <br> 
+         <br> 
         Achievement of the Course Outcomes will be assessed by a theory assessment to demonstrate the underpinning knowledge gained. The delegate's achievement of the Course Outcomes will be confirmed by a certificate which will be forwarded to the nominated contact following the course. Passing the conducted assessment provides one of the main routes to secure a job and can provide additional qualifications for professional registration. It is designed to test candidates' knowledge of railway signal and telecommunications principles and practices thought in the course. The assessment regulations ensure that all candidates are given the same opportunities and that the examinations are conducted in a fair manner. Awards are available to candidates who achieve outstanding marks in the internal assessment.
 
       </p>
