--- a/WTE.html
+++ b/WTE.html
@@ -47,11 +47,11 @@
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="#">Projects</a>
                 <a class="dropdown-item" href="#">Research And Development</a>
-                <a class="dropdown-item" href="#">Courses</a>
-                <a class="dropdown-item" href="#">Training Certification</a>
-                <a class="dropdown-item" href="#">Our Potential Employers</a>
-                <a class="dropdown-item" href="#">Why To Enroll</a>
-                <a class="dropdown-item" href="#">FAQ</a>
+                <a class="dropdown-item" href="Tcourse.html">Courses</a>
+                <a class="dropdown-item" href="Trainingcertificate.html">Training Certification</a>
+                <a class="dropdown-item" href="ourpotentiaemployers.html">Our Potential Employers</a>
+                <a class="dropdown-item" href="WTE.html">Why To Enroll</a>
+                <a class="dropdown-item" href="faq.html">FAQ</a>
                 <a class="dropdown-item" href="#">Payment</a>
               </div>
             </li>
@@ -61,9 +61,9 @@
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Apprenticeship </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                <a class="dropdown-item" href="#">Apperentice Courses</a>
-                <a class="dropdown-item" href="#">Stipened During Apprenticeship</a>
-                <a class="dropdown-item" href="#">Interview Opportunities</a>
+                <a class="dropdown-item" href="Acourses.html">Apperentice Courses</a>
+                <a class="dropdown-item" href="stipenduringtraining.html">Stipened During Apprenticeship</a>
+                <a class="dropdown-item" href="interviewopportunities.html">Interview Opportunities</a>
               </div>
             </li>
           </li>
@@ -82,29 +82,51 @@
     <div   class="content" style="padding-top: 5rem ; ">
       <!-- <H1  style="font-size: 35px;"><ul> </ul> </H1> -->
     </div>
-    <!-- INTRO -->
-    <div class="innercontent " style="text-align: left; padding-left: 35px; width: 50%;">
-      <p style="color: white; " >
-        <strong>What practical knowledge you will achieve.</strong> <br> <br>
-        1 Signalling project working experience <br>  
-2 Site visits to train operation facilities <br> 
-3 On successful completion of course, you will be given simple projects to work. <br> 
-4 Project life cycle will be guided step by step with relevant examples and documentation for candidate to work on.      </p>
-    </div>
-
-    <div class="innercontent " style="text-align: center; width: 80%; ;">
-        <p style="color: white; " >
-          <strong>What are the main benefits?</strong> <br> <br>
-          1 Great Practical knowledge through site visits <br>
-          2 Project working experience <br>
-          3 Good connections to build a career abroad and interactions with senior colleagues in industry working globally. <br>
-          4 If you are looking for a good career in UK or Australia, this is a good opportunity <br>
-          5 Guidance will be provided until you achieve a reasonable placement. <br>
-          6 We provide a stipend of 8000/- per month during apprenticeship courses.      </p>
+      <div class="wte1 row">
+      <div class="card text-white bg-dark sm-4 " style="max-width: 20rem;">
+        <div class="card-header"> <strong>What practical knowledge you will achieve.</strong> </div>
+        <div class="card-body">
+          <h5 class="card-title"></h5>
+          <p class="card-text">• Signalling project working experience <br>
+            • Site visits to train operation facilities <br>
+            • On successful completion of course, you will be given simple projects to work. <br>
+            • Project life cycle will be guided step by step with relevant examples and documentation for candidate to work on.</p>
+        </div>
       </div>
-  </div>
-</div>
+    
+      <div class="card text-white bg-dark sm-4 " style="max-width: 20rem;text-align: left; justify-content: center;">
+        <div class="card-header"> <strong>What are the main benefits?</strong></div>
+        <div class="card-body">
+          <p class="card-text">• Great Practical knowledge through site visits <br>
+            • Project working experience <br>
+            • Good connections to build a career abroad and interactions with senior colleagues in industry working globally. <br>
+            • If you are looking for a good career in UK or Australia, this is a good opportunity <br>
+            • Guidance will be provided until you achieve a reasonable placement. <br>
+            • We provide a stipend of 8000/- per month during apprenticeship courses.</p>
+        </div>
+      </div>
+      <div class="card text-white bg-dark sm-4 " style="max-width: 20rem;text-align: left; justify-content: center;">
+        <div class="card-header"> <strong>What are Qualifications of Candidates</strong></div>
+        <div class="card-body">
+          <p class="card-text">• We prefer engineering graduates with reasonable communication skill in English. <br>
+            • For diploma students we prefer students with 75% above aggregate results and reasonable communication <br>
+            • We prefer responsible and accountable candidates while short 
+        </div>
+    </div>
+    <div class="card text-white bg-dark sm-4 " style="max-width: 20rem;text-align: left; justify-content: center;">
+      <div class="card-header"> <strong>Application Fee & Stipend</strong></div>
+      <div class="card-body">
+        <p class="card-text">• Interested candidates should apply on the website and applications fee is 1000/-. <br>
+          • Shortlisted applicants will be interviewed. <br>
+          • Upon selection candidates will be trained at training institute via online training and a stipend of 8000/- will be paid during training. <br>
+          • Equipment like laptops, safety vests, boots required during training will be provided.
+          • Transportation required for site visits will be provided by the company. 
+      </div>
 
+
+   </div>
+  </div>
+ 
 
 
     <section>
