--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#">Projects</a>
                     <a class="dropdown-item" href="#">Research And Development</a>
-                    <a class="dropdown-item" href="#">Courses</a>
+                    <a class="dropdown-item" href="Tcourse.html">Courses</a>
                     <a class="dropdown-item" href="Trainingcertificate.html">Training Certification</a>
                     <a class="dropdown-item" href="ourpotentiaemployers.html">Our Potential Employers</a>
-                    <a class="dropdown-item" href="#">Why To Enroll</a>
-                    <a class="dropdown-item" href="#">FAQ</a>
+                    <a class="dropdown-item" href="WTE.html">Why To Enroll</a>
+                    <a class="dropdown-item" href="faq.html">FAQ</a>
                     <a class="dropdown-item" href="#">Payment</a>
                   </div>
                 </li>
@@ -66,9 +66,9 @@
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Apprenticeship </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                    <a class="dropdown-item" href="#">Apperentice Courses</a>
-                    <a class="dropdown-item" href="#">Stipened During Apprenticeship</a>
-                    <a class="dropdown-item" href="#">Interview Opportunities</a>
+                    <a class="dropdown-item" href="Acourses.html">Apperentice Courses</a>
+                    <a class="dropdown-item" href="stipenduringtraining.html">Stipened During Apprenticeship</a>
+                    <a class="dropdown-item" href="interviewopportunities.html">Interview Opportunities</a>
                   </div>
                 </li>
               </li>
