--- a/WTE.html
+++ b/WTE.html
@@ -78,11 +78,11 @@
   
   
 
-  <div class="main">
+  <div class="main" style="margin-top: 2rem;">
     <div   class="content" style="padding-top: 5rem ; ">
       <!-- <H1  style="font-size: 35px;"><ul> </ul> </H1> -->
     </div>
-      <div class="wte1 row">
+      <div class="wte1 row" style="grid-gap :20px;">
       <div class="card text-white bg-dark sm-4 " style="max-width: 20rem;">
         <div class="card-header"> <strong>What practical knowledge you will achieve.</strong> </div>
         <div class="card-body">
