--- a/index.html
+++ b/index.html
@@ -80,19 +80,25 @@
       <div id="carouselExampleIndicators" class="carousel slide"  data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100 position-relative" src="Img/Train.jpg" alt="First slide">
+            <img class="d-block w-100 position-relative" src="Img/Train.jpg" style="filter:brightness(70%);" alt="First slide">
             <div class="corousel-content position-absolute">
               <div id="topText">
                 Free Training With Good Stipend
                 In Railway Signalling Field
                 Training Institute of railway Signalling
               </div>
-              <div class="d-flex flex-row">
+              <div class="d-flex flex-row justify-content-center">
                 <a class="btn1" href="Registrationform.html">
-                  Registration Form
+                  Signalling
                 </a>
                 <a style="margin-left:20px;" class="btn1" href="ContactUs.htmls ">
-                    Contact Me
+                    Electrical
+                </a>
+                <a style="margin-left:20px;" class="btn1" href="Registrationform.html">
+                  PVAY
+                </a>
+                <a style="margin-left:20px;" class="btn1" href="Registrationform.html">
+                  Research and Development
                 </a>
               </div>
             </div>
@@ -107,12 +113,18 @@
                 Signal designing Project and best work place
               </div>
               <div class="d-flex flex-row">
-                <a class="btn1" href="Registrationform.html">
-                  Registration Form
+                <a class="btn1,"margin-left:20px; href="Registrationform.html">
+                  Signalling
                 </a>
                 <a style="margin-left:20px;" class="btn1" href="ContactUs.htmls ">
-                    Contact Me
-                </a>
+                  Electrical
+              </a>
+              <a style="margin-left:20px;" class="btn1" href="Registrationform.html">
+                PVAY
+              </a>
+              <a style="margin-left:20px;" class="btn1" href="Registrationform.html">
+                Research and Development
+              </a>
               </div>
             </div>
           </div>
@@ -124,11 +136,17 @@
               </div>
               <div class="d-flex flex-row">
                 <a class="btn1" href="Registrationform.html">
-                  Registration Form
+                  Signalling
                 </a>
                 <a style="margin-left:20px;" class="btn1" href="ContactUs.htmls ">
-                    Contact Me
-                </a>
+                  Electrical
+              </a>
+              <a style="margin-left:20px;" class="btn1" href="Registrationform.html">
+                PVAY
+              </a>
+              <a style="margin-left:20px;" class="btn1" href="Registrationform.html">
+                Research and Development
+              </a>
               </div>
           </div>
 
